// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/view_image/ImagePreview should match snapshot, with preview 1`] = `
<div
  className="image_preview_div"
>
  <img
    className="image_preview__normal"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id_1/preview"
    style={
      Object {
        "borderRadius": "8px",
        "transform": "
            translate(0px, 0px)
            scale(1)
        ",
      }
    }
  />
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, with preview, cannot download 1`] = `
<div
  className="image_preview_div"
>
  <img
    className="image_preview__normal"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id_1/preview"
    style={
      Object {
        "borderRadius": "8px",
        "transform": "
            translate(0px, 0px)
            scale(1)
        ",
      }
    }
  />
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, without preview 1`] = `
<div
  className="image_preview_div"
>
  <img
    className="image_preview__normal"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id?download=1"
    style={
      Object {
        "borderRadius": "8px",
        "transform": "
            translate(0px, 0px)
            scale(1)
        ",
      }
    }
  />
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, without preview, cannot download 1`] = `
<div
  className="image_preview_div"
>
  <img
    className="image_preview__normal"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id?download=1"
    style={
      Object {
        "borderRadius": "8px",
        "transform": "
            translate(0px, 0px)
            scale(1)
        ",
      }
    }
  />
</div>
`;
